--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -12,6 +13,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-smooth-scrollbar": "^8.0.6",
+    "react-spinners": "^0.11.0",
     "smooth-scrollbar": "^8.6.3",
     "styled-components": "^5.3.1",
     "uuidv4": "^6.2.12",
